# simple-team-screenshare

./: README.md
.devcontainer/: devcontainer.json
backend/: Cargo.toml
backend/src/: main.rs  srt.rs  state.rs  websocket.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  Player.tsx  lib.ts
