[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
bytes = "1.10.1"
futures = "0.3.31"
include_dir = "0.7.4"
mime_guess = "2.0.5"
serde_json = "1.0.140"
srt-tokio = "0.4"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
